# hospital-open-env

./: .dockerignore  .gitignore  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
server/: Dockerfile  app.py  environment.py
