[project]
name = "hospital-resource-env"
version = "0.0.0"
description = "Hospital emergency resource management environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
